# smishing-models

./: README.md  pyproject.toml  translator.prompt.yml
data/: SMSSpamCollectionDataset.csv  SpamMailsDataset-ptbr.csv  smishtank_dataset.csv
data/SMISH_DT-main/: README.md
data/SMISH_DT-main/Dataset/: SPAM-Hunter_full_dataset_messages.csv  british-english-sms-corpora.doc  tld-list-basic.csv
data/SMISH_DT-main/Refined Datasets/: Refined_English_SMS_Dataset.csv  Refined_ExAIS_SMS_Spam_Dataset.csv  Refined_Mendeley_Smishing_Dataset.csv  Refined_NUS_Corpus_Dataset.csv  Refined_Smishtank_Dataset.csv  Refined_UCI_ML_Repo_Dataset.csv
data/SMISH_DT-main/URL Data/: British Dataset Spam.csv  British Dataset.csv  British Websites Analysis.csv  Enron Websites Analysis.csv  ExAIS Websites Analysis.csv  ExAIS_dataset.csv  ExAIS_dataset_Ham.csv  ExAIS_dataset_Spam.csv  Korean Dataset Ham.csv  Korean Dataset Spam.csv  Korean Dataset.csv  Korean Websites Analysis.csv  Mendeley Dataset Smishing.csv  Mendeley Dataset Spam.csv  Mendeley Dataset.csv  Mendeley Websites Analysis.csv  NUS Dataset.csv  NUS Websites Analysis.csv  SMSGateway Websites Analysis.csv  SPAM-Hunter.csv  Smishtank Dataset.csv  Smishtank Websites Analysis.csv  UCI Dataset Ham.csv  UCI Dataset Spam.csv  UCI Dataset.csv  UCI Websites Analysis.csv  enron Dataset Ham.csv  enron Dataset Spam.csv  enron Dataset.csv  sp24 Dataset.csv  spamhunter Websites Analysis.csv  (+4 more)
data/pu_corpora_public/: readme.txt
data/smssmishcollection/: readme
fakewhatsapp/notebooks/: exploratory.ipynb
notebooks/: translate.ipynb
(+31203 files in other folders)
