[tool.poetry]
name = "smishing-models"
version = "0.1.0"
description = "Projeto para modelos de detecção de smishing"
authors = ["Marcelo Filho"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pandas = "^2.3.1"
openai = "^1.97.0"
pyyaml = "^6.0.2"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
